--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="../static/css/estilo.css">
 <meta charset="ISO-8859-1">
-<title>TP04 Mamani Julieta</title>
+<title>Index</title>
+<link href="css/estilo.css" rel="stylesheet" type="text/css">
 </head>
 <body class="body">
-	<div>
-		<div>
 			<div class="title">
 				<h1>Liga de Futbol Profesional</h1>
 			</div>
@@ -18,47 +16,43 @@
 					<a class="nav-link" href="#">Equipos</a>
 				</nav>
 			</div>
-		</div>
-		<div class="row">
+	<div class="row">
 			<div class="col-9">
-				<div class="nav"><h2>Noticias</h2></div>
+					<div><h2>Noticias</h2></div>
 				<div class="card-deck">
-					<div class="card col-4">
-						<img src="../static/img/logo.jpg" class="card-img" alt="logoFI">
-						<div class="card-body">
-							<h3>Card title</h3>
-							<p>This is a longer card with supporting
-								text below as a natural lead-in to additional content. This
-								content is a little bit longer.</p>							
+						<div class="card col-4">
+							<img src="../static/img/logo.jpg" class="card-img" alt="logoFI">
+							<div class="card-body">
+								<h3>12/03/20</h3>
+								<p>Nueva noticia de los partidos suspendidos en la cuarentena</p>							
+							</div>
 						</div>
-					</div>
-					<div class="card col-4">
-						<img src="../static/img/logo.jpg" class="card-img" alt="logoFI">
-						<div class="card-body">
-							<h3 class="card-title">Card title</h3>
-							<p class="card-text">This card has supporting text below as a
-								natural lead-in to additional content.</p>							
+						<div class="card col-4">
+							<img src="../static/img/logo.jpg" class="card-img" alt="logoFI">
+							<div class="card-body">
+								<h3>13/03/20</h3>
+								<p class="card-text">Repeticion de la transmicion en vivo
+								de la final de la copa anual profesional</p>							
+							</div>
 						</div>
-					</div>
-					<div class="card col-4">
-						<img src="../static/img/logo.jpg" class="card-img" alt="logoFI">
-						<div class="card-body">
-							<h3 class="card-title">Card title</h3>
-							<p class="card-text">This is a wider card with supporting
-								text below as a natural lead-in to additional content. This card
-								has even longer content than the first to show that equal height
-								action.</p>							
+						<div class="card col-4">
+							<img src="../static/img/logo.jpg" class="card-img" alt="logoFI">
+							<div class="card-body">
+								<h3 class="card-title">20/03/20</h3>
+								<p class="card-text">Reprogramacion de sorteos para las proximas 
+								fechas</p>							
+							</div>
 						</div>
-					</div>
+						</div>
 				</div>
-			</div>
 			<div class="col-3">
-				<div>Titulo de Publicidad</div>
-				<div>Anuncios</div>
+				<div>Auspiciantes</div>
+				
 			</div>
-		</div>
-
-		<div>Contacto</div>
+			
 	</div>
+
+	<div>Contacto</div>
+	
 </body>
 </html>
