--- a/src/main/resources/static/css/estilo.css
+++ b/src/main/resources/static/css/estilo.css
@@ -2,8 +2,9 @@
     box-sizing: border-box;
 }
 .body{
-	border: 15px solid Silver;
+	border: 8px solid Silver ;
 	margin: 0;
+	
 }
 .title{
 	padding: 20px;
@@ -19,55 +20,6 @@ h1 {
 	font-size: 3em;
 	text-align: center;
 }
-
-.col-1 {
-    width: 8.33%;
-}
-
-.col-2 {
-    width: 16.66%;
-}
-
-.col-3 {
-    width: 25%;
-}
-
-.col-4 {
-    width: 33.33%;
-}
-
-.col-5 {
-    width: 41.66%;
-}
-
-.col-6 {
-    width: 50%;
-}
-
-.col-7 {
-    width: 58.33%;
-}
-
-.col-8 {
-    width: 66.66%;
-}
-
-.col-9 {
-    width: 75%;
-}
-
-.col-10 {
-    width: 83.33%;
-}
-
-.col-11 {
-    width: 91.66%;
-}
-
-.col-12 {
-    width: 100%;
-}
-
 .row {
     width: 100%;
     margin-bottom: 20px;
@@ -83,8 +35,9 @@ h1 {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
-  background-color: #00BFFF; 
   color:#004080;
+  border-bottom:5px solid Silver;
+  background-color:#7cadff;
 }
 
 .nav-link {
@@ -119,7 +72,7 @@ h1 {
     -ms-flex-flow: row wrap;
     flex-flow: row wrap;
     
-  }
+}
   
  .card-img {
   -ms-flex-negative: 0;
@@ -127,3 +80,55 @@ h1 {
   width: 100%;
   padding: 1em;
 }
+.col-1 {
+    width: 8.33%;
+}
+
+.col-2 {
+    width: 16.66%;
+}
+
+.col-3 {
+    width: 25%;
+    background-color: #bde4f5;
+    border-left: silver 5px solid;
+}
+
+.col-4 {
+    width: 33.33%;
+    background-color: #bde4f5;
+}
+
+.col-5 {
+    width: 41.66%;
+}
+
+.col-6 {
+    width: 50%;
+}
+
+.col-7 {
+    width: 58.33%;
+}
+
+.col-8 {
+    width: 66.66%;
+}
+
+.col-9 {
+    width: 75%;
+    background-color: #bde4f5;
+}
+
+.col-10 {
+    width: 83.33%;
+}
+
+.col-11 {
+    width: 91.66%;
+}
+
+.col-12 {
+    width: 100%;
+}
+
