--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -21,14 +21,14 @@
 					<div><h2>Noticias</h2></div>
 				<div class="card-deck">
 						<div class="card col-4">
-							<img src="../static/img/logo.jpg" class="card-img" alt="logoFI">
+							<img src="../img/Noticia1.jpg" class="card-img" alt="Noticia3">
 							<div class="card-body">
 								<h3>12/03/20</h3>
 								<p>Nueva noticia de los partidos suspendidos en la cuarentena</p>							
 							</div>
 						</div>
 						<div class="card col-4">
-							<img src="../static/img/logo.jpg" class="card-img" alt="logoFI">
+							<img src="../img/Noticia2.jpg" class="card-img" alt="logoFI">
 							<div class="card-body">
 								<h3>13/03/20</h3>
 								<p class="card-text">Repeticion de la transmicion en vivo
@@ -36,7 +36,7 @@
 							</div>
 						</div>
 						<div class="card col-4">
-							<img src="../static/img/logo.jpg" class="card-img" alt="logoFI">
+							<img src="../img/Noticia3.jpg" class="card-img" alt="Noticia3">
 							<div class="card-body">
 								<h3 class="card-title">20/03/20</h3>
 								<p class="card-text">Reprogramacion de sorteos para las proximas 
