--- a/src/main/resources/static/css/estilo.css
+++ b/src/main/resources/static/css/estilo.css
@@ -46,17 +46,14 @@ h1 {
 }
 
 .card {
-  position: relative;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: column;
   flex-direction: column;
   min-width: 0;
-  word-wrap: break-word;
-  background-color: #fff;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem;
+  border-color:#004080;
 }
 
 .card-body {
@@ -71,7 +68,6 @@ h1 {
     display: flex;
     -ms-flex-flow: row wrap;
     flex-flow: row wrap;
-    
 }
   
  .card-img {
@@ -79,6 +75,7 @@ h1 {
   flex-shrink: 0;
   width: 100%;
   padding: 1em;
+  
 }
 .col-1 {
     width: 8.33%;
