--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -11,9 +11,9 @@
 			</div>
 			<div>
 				<nav class="nav">
-					<a class="nav-link" href="#">Home</a> 
-					<a class="nav-link" href="#">Fixture</a>
-					<a class="nav-link" href="#">Equipos</a>
+					<a href="Index.html" class="nav-link" >Home</a> 
+					<a href="templates/fixture.html" class="nav-link" >Fixture</a>
+					<a class="nav-link" href="equipos.html">Equipos</a>
 				</nav>
 			</div>
 	<div class="row">
