--- a/src/main/resources/templates/equipos.html
+++ b/src/main/resources/templates/equipos.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>fixture</title>
+<title>Equipos</title>
 <link href="css/estilo.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-		<h1 class="title">hola</h1>
+	<h1 class="title">hola</h1>
 </body>
 </html>
